--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Predios privados/infracciones/inciso_b.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Predios privados/infracciones/inciso_b.cshtml
@@ -29,7 +29,7 @@
         </tr>
     </tbody>
 </table>
-<ol class="continue" style="margin-left: -37pt;">
+<ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
     {{if informe.COD_TIPO_INFORME == 1}}
     <li>
         <span>
