--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/infracciones/inciso_19.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/infracciones/inciso_19.cshtml
@@ -25,7 +25,7 @@
         </tr>
     </tbody>
 </table>
-<ol class="continue" style="margin-left: -37pt;">
+<ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
     <li>
         Mediante la Resolución Sub Directoral N° ${informe.ANTECEDENTES_DOCS.RSD.numero || 'XXXXX-XXXX-OSINFOR/08.2.1'}, de fecha ${informe.ANTECEDENTES_DOCS.RSD.fechaEmisionTexto ||'XX de XXXX'}, se imputó al/la concesionario/a presuntamente incumplir con las obligaciones legamente establecidas en el contrato de concesión y el plan de manejo aprobado, al no haber declarado el aprovechamiento de un volumen de XX.XXX m3 (descripción del volumen total no declarado, precisando el volumen correspondiente a cada especie).
     </li>
