--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/infracciones/inciso_2.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/infracciones/inciso_2.cshtml
@@ -29,7 +29,7 @@
 </table>
 
 {{if infraccion.flgDesvirtua}}
-<ol class="continue" style="margin-left: -37pt;">
+<ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
     <li>
         Mediante la Resolución Sub Directoral N° 00XXX-XXXX-OSINFOR/08.2.1, de fecha XX de XXXX, se imputó al/la concesionario/a presuntamente incumplir con la presentación (descripción del tipo de informe de ejecución y el periodo).
     </li>
@@ -65,7 +65,7 @@
 {{/if}}
 {{if infraccion.flgSubsana}}
 <h5><strong>Sobre la subsanación voluntaria</strong></h5>
-<ol class="continue" style="margin-left: -37pt;">
+<ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
     <li>
         <span>
             En tal sentido, teniendo en consideración que las condiciones y forma en cómo se procederá a realizar la subsanación voluntaria ya se encuentra establecida en el RISMFFS, resulta pertinente aplicar los criterios señalados en dicho Reglamento teniéndose en cuenta los siguientes requisitos:<br />
@@ -124,7 +124,7 @@
         </span>
     </li>
 </ol>
-<ol class="continue" style="margin-left: -37pt;">
+<ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
     <li>
         En atención a lo señalado precedentemente, se advierte que la conducta <strong>del/la concesionario/a</strong> cumple con los requisitos para la aplicación de la figura de subsanación voluntaria respecto de la infracción materia de análisis.
     </li>
