--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/infracciones/inciso_21.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/infracciones/inciso_21.cshtml
@@ -22,7 +22,7 @@
         </tr>
     </tbody>
 </table>
-<ol class="continue" style="margin-left: -37pt;">
+<ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
     <li>
         Mediante la Resolución Sub Directoral N° ${informe.ANTECEDENTES_DOCS.RSD.numero || 'XXXXX-XXXX-OSINFOR/08.2.1'}, de fecha ${informe.ANTECEDENTES_DOCS.RSD.fechaEmisionTexto ||'XX de XXXX'}, se imputó al/la concesionario/a presuntamente talar, extraer y/o aprovechar recursos forestales, sin autorización, en su condición o no de titular del título habilitante por un volumen de XX.XXX m3 (descripción del volumen total injustificado, precisando el volumen correspondiente a cada especie), a excepción de los aprovechados por subsistencia.
     </li>
