--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/infracciones/inciso_b.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/infracciones/inciso_b.cshtml
@@ -26,7 +26,7 @@
         </tr>
     </tbody>
 </table>
-<ol class="continue" style="margin-left: -37pt;">
+<ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
     <li>
         Mediante la Resolución Sub Directoral N° ${informe.ANTECEDENTES_DOCS.RSD.numero || 'XXXXX-XXXX-OSINFOR/08.2.1'}, de fecha ${informe.ANTECEDENTES_DOCS.RSD.fechaEmisionTexto ||'XX de XXXX'}, se imputó al/la concesionario/a presuntamente la incursión en la causal de caducidad por la extracción o movilización de recursos forestales y de fauna silvestre y de fauna silvestre por un volumen de XX.XXX m<sup>3</sup> (descripción del volumen total injustificado, precisando el volumen correspondiente a cada especie).
     </li>
