--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/infracciones/inciso_17.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/infracciones/inciso_17.cshtml
@@ -30,7 +30,7 @@
     </tbody>
 </table>
 
-<ol class="continue" style="margin-left: -37pt;">
+<ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
     <li>
         En ese sentido de lo recogido en el informe de supervisión y contrastado con el plan de manejo, nos permite acreditar que se realizaron incumplimientos en su plan de manejo respecto al XX
     </li>
