--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/infracciones/inciso_b.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/infracciones/inciso_b.cshtml
@@ -31,7 +31,7 @@
     </tbody>
 </table>
 
-<ol class="continue" style="margin-left: -37pt;">
+<ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
     <li>
         De la evaluación del Informe de Supervisión Nº ${informe.ANTECEDENTES_DOCS.Inf_Sup.numero || 'XXXXX-XXXX-OSINFOR/08.2.X'}, de fecha ${informe.ANTECEDENTES_DOCS.Inf_Sup.fechaEmisionTexto || 'XX de XXXXX de XXXX'}, se observa que a la titular se le autorizó mediante Resolución Sub Directoral N° ${informe.ANTECEDENTES_DOCS.RSD.numero || 'XXXXX-XXXX-OSINFOR/08.2.X'}, de fecha ${informe.ANTECEDENTES_DOCS.RSD.fechaEmisionTexto || 'XX de XXXXX de XXXX'} el funcionamiento del Centro de Custodia Temporal, por lo que, se debe precisar que, la administrada tuvo que presentar el informe de ejecución de los periodos XX; sin embargo, se observa de la revisión del Sistema de tramite documentario – SITD, que a la emisión del presente informe, la administrada no ha cumplió con la obligación de la presentación del informe de ejecución mencionado al OSINFOR, encontrando así que dicha obligación no se encuentra siendo cumplida.
     </li>
