Corrección obs Seg

--- a/SIGOFCv3/Areas/Supervision/Views/ManInforme/_ZonifDistribEspecie.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInforme/_ZonifDistribEspecie.cshtml
@@ -1,5 +1,4 @@
-﻿
-<script src="~/Areas/Supervision/js/ManInforme/_ZonifDistribEspecie.js"></script>
+﻿<script src="~/Areas/Supervision/js/ManInforme/_ZonifDistribEspecie.js"></script>
 
 <div class="modal-dialog" role="document">
     <div class="modal-content">
